CS/src/objects/Country_Product__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Country Product</relationshipLabel>
        <relationshipName>Country_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost per Calendar Month</fullName>
                </value>
                <value>
                    <fullName>ATM Fee in other currencies</fullName>
                </value>
                <value>
                    <fullName>Card Replacement Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Country Product</relationshipLabel>
        <relationshipName>Country_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Country Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Country Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>